--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Install Sphinx
       run: pip install sphinx
     - name: Build documentation using Sphinx
-      run:
+      run: |
         rm -r docs/
         mkdir docs
         cd docs
