--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -28,9 +28,13 @@ jobs:
       with:
         name: DocumentationHTML
         path: docs/_build/html/
+    - name: Checkout Github Pages branch
+      uses: actions/checkout@v3
+      with:
+        ref: gh-pages
+        path: gh-pages
     - name: Commit and push documentation changes
       run: |
-        git clone https://github.com/tristan-ranff/pyiohat.git --branch gh-pages --single-branch gh-pages
         cp -r docs/_build/html/* gh-pages/
         cd gh-pages
         touch .nojekyll
