--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -22,6 +22,8 @@ jobs:
         mkdir docs
         cd docs
         sphinx-quickstart -p pyiohat -a 'Tristan Ranff, Manuel Kösters, Artyom Vlasov, Christian Fufezan' -v ${{ github.ref_name }} -l en --no-sep -q --ext-autodoc
+        echo "import sys, os" >> conf.py
+        echo "sys.path.insert(0, os.path.abspath('..'))" >> conf.py
         sphinx-apidoc -o source/ ../pyiohat
         make html
     - uses: actions/upload-artifact@v1
