--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -14,6 +14,8 @@ jobs:
     - uses: actions/setup-python@v2
       with:
         python-version: '3.10'
+    - name: Install pyiohat
+      run: pip install .
     - name: Install Sphinx
       run: pip install sphinx
     - name: Build documentation using Sphinx
