--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -1,3 +1,5 @@
+name: Build Docs
+
 on:
   push:
     tags:
@@ -23,7 +25,7 @@ jobs:
         rm -r docs/
         mkdir docs
         cd docs
-        sphinx-quickstart -p pyiohat -a 'Tristan Ranff, Manuel Kösters, Artyom Vlasov, Christian Fufezan' -v ${{ github.ref_name }} -l en --no-sep -q --ext-autodoc
+        sphinx-quickstart -p pyiohat -a $(awk '{print $1,$2}' ../AUTHORS.TXT | paste -s -d, - | sed -e 's/,/, /g') -v ${{ github.ref_name }} -l en --no-sep -q --ext-autodoc
         sphinx-apidoc -o source/ ../pyiohat
         make html
     - name: Checkout Github Pages branch
