--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -24,10 +24,14 @@ jobs:
         pip install sphinx-rtd-theme
     - name: Build documentation using Sphinx
       run: |
-        rm -r docs/
+        mkdir static_docs
+        mv docs/*.rst static_docs/
+        rm -r docs
         mkdir docs
         cd docs
         sphinx-quickstart -p pyiohat -a "$(awk '{print $1,$2}' ../AUTHORS.TXT | paste -s -d, - | sed -e 's/,/, /g')" -v ${{ github.ref_name }} -l en --no-sep -q --ext-autodoc --extensions sphinx_rtd_theme
+        mv static_docs/*.rst docs/
+        rm -r static_docs
         sed -E "s/(html_theme =) .*/\1 'sphinx_rtd_theme'/" conf.py > tmp.py
         mv tmp.py conf.py
         sphinx-apidoc -o source/ ../pyiohat
