--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -30,7 +30,7 @@ jobs:
         mkdir docs
         cd docs
         sphinx-quickstart -p pyiohat -a "$(awk '{print $1,$2}' ../AUTHORS.TXT | paste -s -d, - | sed -e 's/,/, /g')" -v ${{ github.ref_name }} -l en --no-sep -q --ext-autodoc --extensions sphinx_rtd_theme
-        mv ../static_docs/*.rst docs/
+        mv ../static_docs/*.rst . || true
         rm -r ../static_docs
         sed -E "s/(html_theme =) .*/\1 'sphinx_rtd_theme'/" conf.py > tmp.py
         mv tmp.py conf.py
